modify the chart

--- a/rec/rec/templates/addexpense.html
+++ b/rec/rec/templates/addexpense.html
@@ -62,6 +62,7 @@
                             <option value="0">其他</option>
                             <option value="1">购物</option>
                             <option value="2">餐饮</option>
+                              <option value="3">还款</option>
                           </select>
                           <div class="invalid-feedback">请选择消费类型</div>
 <!--                        </div>-->
