--- a/rec/rec/templates/main.html
+++ b/rec/rec/templates/main.html
@@ -7,7 +7,8 @@
           <div class="container-fluid">
             <!--begin::Row-->
             <div class="row">
-              <div class="col-sm-6"><h3 class="mb-0">消费概览</h3></div>
+              <div class="col-sm-6"><h3 class="mb-0">消费概览</h3>
+              今天是 {{today}}</div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-end">
                   <li class="breadcrumb-item"><a href="#">Home</a></li>
