--- a/rec/rec/templates/adddebt.html
+++ b/rec/rec/templates/adddebt.html
@@ -66,15 +66,15 @@
                           </div>
                         </div>
 
-                        <div class="form-group">
-                          <label for="interestRate">总利息</label>
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <span class="input-group-text">￥</span>
-                            </div>
-                            <input required type="text" class="form-control" id="interestRate" name="interest" placeholder="请输入总利息">
-                          </div>
-                        </div>
+<!--                        <div class="form-group">-->
+<!--                          <label for="interestRate">总利息</label>-->
+<!--                          <div class="input-group">-->
+<!--                            <div class="input-group-prepend">-->
+<!--                              <span class="input-group-text">￥</span>-->
+<!--                            </div>-->
+<!--                            <input required type="text" class="form-control" id="interestRate" name="interest" placeholder="请输入总利息">-->
+<!--                          </div>-->
+<!--                        </div>-->
 
                           <div class="form-group">
                           <label for="interestRate">每期待还</label>
