--- a/rec/rec/templates/detailOfdebts.html
+++ b/rec/rec/templates/detailOfdebts.html
@@ -36,9 +36,9 @@
                         <tr>
                           <th style="width: 10px">#</th>
                           <th>债务方</th>
-                          <th>本金</th>
-                          <th>利息</th>
-                            <th>总负债</th>
+                          <th>欠款</th>
+<!--                          <th>利息</th>-->
+<!--                            <th>总负债</th>-->
                             <th>每月待还（12期）</th>
                         </tr>
                       </thead>
