--- a/rec/rec/templates/main.html
+++ b/rec/rec/templates/main.html
@@ -159,7 +159,7 @@
 
 
                 <div class="card mb-4">
-                  <div class="card-header"><h3 class="card-title">Sales Value</h3></div>
+                  <div class="card-header"><h3 class="card-title">消费历史</h3></div>
                   <div class="card-body"><div id="revenue-chart"></div></div>
                 </div>
 
